--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@octokit/types": "^13.6.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.451.0",
     "next": "14.2.13",
     "octokit": "^4.0.2",
